--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "google-genai (>=1.9.0,<2.0.0)",
     "langchain-groq (>=0.3.2,<0.4.0)",
     "pillow (>=11.1.0,<12.0.0)",
-    "langchain-core (>=0.3.49,<0.4.0)"
+    "langchain-core (>=0.3.49,<0.4.0)",
+    "rich (>=14.0.0,<15.0.0)"
 ]
 
 
